# matrix_profile

./: Cargo.toml  README.md  shell.nix
benches/: distance_profile.rs  squared_euclidean_distance.rs
src/: lib.rs  load_from_csv.rs  naive.rs
