[package]
name = "matrix_profile"
version = "0.6.0"
edition = "2021"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
publish = false
license = "GNU AGPLv3-or-later"

[dependencies]
simd_euclidean = { path = "../simd-euclidean", version = "0.2" }
sliding_features = "2"

[dev-dependencies]
csv = "1"
criterion = "0.5"

[[bench]]
name = "distance_profile"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
